tests/hevm/fail/unspecced_storage/unspecced_storage.act
constructor of A
interface constructor()

iff

  CALLVALUE == 0

creates

  mapping (uint=>uint) x := []

behaviour f of A
interface f()

// fails to mention the state update

returns

  1
